# seven-clicker-sample

./: .clang-format  .pre-commit-config.yaml  CONTRIBUTING.MD  README.md  SECURITY.md  west.yml
.github/workflows/: build.yml  conventional-commit.yml  dco-check.yml  lgtm.yml  what_is_lgtm.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: mikroe_clicker_2.conf  mikroe_clicker_2.overlay  mikroe_clicker_2_mcuboot.conf  mikroe_clicker_2_mcuboot.overlay
app/src/: aws.c  aws.h  main.c  mender.c  mender.h  modem.c  modem.h  mqtt_client.h  sensor.c  sensor.h
app/src/creds/: .gitignore  convert_keys.py  dummy.c
